--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "default-passive-events": "^2.0.0",
     "vant": "^3.0.14",
     "vue": "^3.0.0-rc.1",
     "vue-router": "^4.0.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.1"
+    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
+    "vite": "^1.0.0-rc.1"
   }
 }
