--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "amfe-flexible": "^2.2.1",
+    "autoprefixer": "^10.2.5",
     "less": "^4.1.1",
     "less-loader": "^8.1.1",
-    "vite": "^1.0.0-rc.1"
+    "postcss-pxtorem": "^6.0.0",
+    "vite": "^1.0.0-rc.1",
+    "vite-plugin-style-import": "^0.9.2"
   }
 }
